2003-02-22  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: ggv has been branched. Reflect this.

2003-02-20  Carlos Perelló Marín <carlos@gnome.org>

	* translation.xml: Readded GNOME 1.4 guikachu

2003-02-20  Carlos Perelló Marín <carlos@gnome.org>

	* translation.xml: Moved ggv && gnome-themes to desktop group.

2003-02-20  Carlos Perelló Marín <carlos@gnome.org>

	* translation.xml: Fixed guikachu release name

2003-02-20  Carlos Perelló Marín <carlos@gnome.org>

	* translation.xml: Removed gnomoku, gnorpm & gnome-utils from GNOME
	1.4 release and moved guikachu to GNOME 2.0

2003-02-20  Carlos Perelló Marín <carlos@gnome.org>

	* translation-status.xml: Fixed procman branch and minor bugs.

2003-02-20  Carlos Perelló Marín <carlos@gnome.org>

	* translation-status.xml, translation-status.dtd: Updated to latest
	version.
	* status/*: Removed. When I cleanup the new code it will be readded
	there.

2003-02-20  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Removed gtkdial and gwvedit from
	gnome-i18n.

2003-02-20  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Removed gnapster from gnome-i18n.

2003-02-20  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Removed toutdoux from gnome-i18n.

2003-02-20  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Removed gnome-find from gnome-i18n.

2003-02-17  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-session has been branched.
	Reflect	this.

2003-02-14  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: eog has been branched. Reflect
	this.

2002-02-14  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Firestarter is now in GNOME cvs,
	reflect this.

2003-02-13  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: procman has been branched. Reflect
	this.

2003-02-12  Christian Rose  <menthos@menthos.com>
