@@ -60,11 +60,22 @@
       <component name="anjuta" dir="anjuta" group="fifth-toe">
 	<podir dir="po"/>
 	<potname name="anjuta.pot"/>
-	<branch name="HEAD"/>
+	<branch name="ANJUTA_1_0_0"/>
 	<regenerate/>
 	<download/>
       </component>
     </version>
+    <version release="gnome-2.2">
+      <component name="anjuta" dir="anjuta" group="developer-app">
+        <podir dir="po"/>
+        <potname name="anjuta.pot"/>
+        <branch name="HEAD"/>
+        <regenerate/>
+        <download/>
+      </component>
+    </version>
+  </module>
+  <module name="anjuta2">
     <version release="gnome-2.2">
       <component name="anjuta2" dir="anjuta2" group="developer-app">
         <podir dir="po"/>
