@@ -1,3 +1,10 @@
+2003-02-24  Vincent van Adrighem  <V.vanAdrighem@dirck.mine.nu>
+
+	* translation-status.xml: Correct anjuta modules to give
+		the correct status for gnome-1.4 (ANJUTA_1_0_0 branch)
+		gnome-2.2 anjuta (HEAD branch)
+		New project anjuta2 (different module, HEAD branch)
+
 2003-02-22  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: ggv has been branched. Reflect this.
